2018-09-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Converter.pm (_end_line_or_comment): Do
	not call _tree_without_comment.
	* tp/Texinfo/Convert/TexinfoXML.pm (_texinfo_line):
	Do not call _tree_without_comment.
	* tp/Texinfo/Convert/Converter.pm (tree_without_comment): Remove.

2018-09-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_isolate_last_space): If @c or @comment 
	is the last in the line, remove it from the 'args' and store it
	as 'comment_at_end' extra value.

	* tp/Texinfo/Convert/TexinfoXML.pm ():
	(_end_line_spaces): Do not handle the case of a comment being in 
	the 'args'.
	(_convert) <@item or @itemx in @table>: Check for and output a 
	comment.

	* tp/Texinfo/Convert/Converter.pm (_end_line_or_comment)
	(_tree_without_comment, _convert_argument_and_end_line):
	Meaning of arguments changed.  Check for a comment in the new 
	location.  Callers updated.

	* tp/Texinfo/Convert/Texinfo.pm (_expand_cmd_args_to_texi): 
	Check for and output a comment.

2018-09-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line) <@multitable>:
	Call _isolate_last_space.

2018-09-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_abort_empty_line): Always get the
	element that refers to the space element through the 'command'
	value.  This saves the trouble of looking at $current, 
	$current->{'parent'}, $current->{'parent'}->{'parent'} etc.
	Delete the 'spaces_after_command_elt' value properly.
	(_parse_texi): Set 'command' on created 
	'empty_spaces_before_argument' elements.
	* tp/Texinfo/XS/misc.c (xs_abort_empty_line): Make the same 
	change.

2018-09-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_start_empty_line_after_command):
	Refer to spaces element at start of line as
	'spaces_after_command_elt' instead of 'spaces_after_command'.
	Refer back to the main element for the command as 'command'.