@@ -1,3 +1,8 @@
+2018-09-15  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Convert/TexinfoXML.pm (_convert) <def line>: Remove 
+	trailing spaces from bracketed terms.
+
 2018-09-12  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* tp/Texinfo/Convert/Converter.pm (_end_line_or_comment): Do
